--- a/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
+++ b/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
@@ -50,12 +50,17 @@
     <Compile Include="Authentications\ICodeFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\ITokenFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\TokenFlowAuthenticator.cs" />
+    <Compile Include="OneDriveEntities\FileInfo.cs" />
     <Compile Include="OneDriveEntities\FileSystemInfo.cs" />
-    <Compile Include="OneDriveEntities\Folder.cs" />
+    <Compile Include="OneDriveEntities\FolderInfo.cs" />
+    <Compile Include="OneDriveEntities\Hashes.cs" />
+    <Compile Include="OneDriveEntities\OneDriveItem.cs" />
     <Compile Include="OneDriveEntities\Operators.cs" />
+    <Compile Include="OneDriveEntities\Parent.cs" />
     <Compile Include="OneDriveEntities\Root.cs" />
+    <Compile Include="OneDriveEntities\VideoMeta.cs" />
     <Compile Include="OneDriveWebController.cs" />
-    <Compile Include="OneDriveEntities\Drives.cs" />
+    <Compile Include="OneDriveEntities\OneDriveArray.cs" />
     <Compile Include="OneDriveEntities\DriveType.cs" />
     <Compile Include="OneDriveEntities\Drive.cs" />
     <Compile Include="OneDriveEntities\OneDriveEntity.cs" />
