--- a/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
+++ b/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
@@ -50,23 +50,22 @@
     <Compile Include="Authentications\ICodeFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\ITokenFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\TokenFlowAuthenticator.cs" />
-    <Compile Include="OneDriveEntities\FileInfo.cs" />
-    <Compile Include="OneDriveEntities\FileSystemInfo.cs" />
-    <Compile Include="OneDriveEntities\FolderInfo.cs" />
-    <Compile Include="OneDriveEntities\Hashes.cs" />
-    <Compile Include="OneDriveEntities\OneDriveItem.cs" />
-    <Compile Include="OneDriveEntities\Operators.cs" />
-    <Compile Include="OneDriveEntities\Parent.cs" />
-    <Compile Include="OneDriveEntities\Root.cs" />
-    <Compile Include="OneDriveEntities\VideoMeta.cs" />
+    <Compile Include="Entities\FileInfo.cs" />
+    <Compile Include="Entities\FileSystemInfo.cs" />
+    <Compile Include="Entities\FolderInfo.cs" />
+    <Compile Include="Entities\Hashes.cs" />
+    <Compile Include="Entities\OneDriveItem.cs" />
+    <Compile Include="Entities\IdentitySet.cs" />
+    <Compile Include="Entities\Parent.cs" />
+    <Compile Include="Entities\Root.cs" />
+    <Compile Include="Entities\VideoInfo.cs" />
     <Compile Include="OneDriveWebController.cs" />
-    <Compile Include="OneDriveEntities\OneDriveArray.cs" />
-    <Compile Include="OneDriveEntities\DriveType.cs" />
-    <Compile Include="OneDriveEntities\Drive.cs" />
-    <Compile Include="OneDriveEntities\OneDriveEntity.cs" />
-    <Compile Include="OneDriveEntities\Owner.cs" />
-    <Compile Include="OneDriveEntities\Quota.cs" />
-    <Compile Include="OneDriveEntities\User.cs" />
+    <Compile Include="Entities\OneDriveArray.cs" />
+    <Compile Include="Entities\DriveType.cs" />
+    <Compile Include="Entities\Drive.cs" />
+    <Compile Include="Entities\OneDriveEntity.cs" />
+    <Compile Include="Entities\Quota.cs" />
+    <Compile Include="Entities\Identity.cs" />
     <Compile Include="OptionalParameters\Expand.cs" />
     <Compile Include="OptionalParameters\ExpandMode.cs" />
     <Compile Include="OptionalParameters\IOneDriveOptionalParameters.cs" />
