--- a/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
+++ b/Jasily.SDK.OneDrive/Jasily.SDK.OneDrive.csproj
@@ -50,14 +50,21 @@
     <Compile Include="Authentications\ICodeFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\ITokenFlowAuthenticationInfo.cs" />
     <Compile Include="Authentications\TokenFlowAuthenticator.cs" />
+    <Compile Include="Entities\AudioInfo.cs" />
     <Compile Include="Entities\FileInfo.cs" />
     <Compile Include="Entities\FileSystemInfo.cs" />
     <Compile Include="Entities\FolderInfo.cs" />
     <Compile Include="Entities\Hashes.cs" />
-    <Compile Include="Entities\OneDriveItem.cs" />
+    <Compile Include="Entities\ImageInfo.cs" />
+    <Compile Include="Entities\MediaInfo.cs" />
+    <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\IdentitySet.cs" />
-    <Compile Include="Entities\Parent.cs" />
+    <Compile Include="Entities\OneDriveObject.cs" />
+    <Compile Include="Entities\ItemReference.cs" />
+    <Compile Include="Entities\PhotoInfo.cs" />
     <Compile Include="Entities\Root.cs" />
+    <Compile Include="Entities\ThumbnailInfo.cs" />
+    <Compile Include="Entities\ThumbnailSet.cs" />
     <Compile Include="Entities\VideoInfo.cs" />
     <Compile Include="OneDriveWebController.cs" />
     <Compile Include="Entities\OneDriveArray.cs" />
